# itr-data-pipeline

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  commands.html  genindex.html  getting-started.html  index.html  objects.inv  pyproject.toml  requirements.txt  requirements.txt~  search.html  searchindex.js  test_environment.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  major-release.md  minor-release.md  patch-release.md  redeliver_container_image.md
.github/PULL_REQUEST_TEMPLATE/: SIMPLE_TEMPLATE.md
.github/workflows/: bootstrap.yaml  notebooks.yaml  security.yaml
data/processed/: template-20220415-output.xlsx
data/processed/OECM 20220504/: benchmark_OECM_PC.xlsx  benchmark_OECM_S3.xlsx
dbt/rmi_transform/: README.md  dbt_project.yml  rmi_base_schema.yml
dbt/rmi_transform/models/: assets_earnings_investments.sql  customers_sales.sql  debt_equity_returns.sql  emissions_targets.sql  employees.sql  expenditure_bills_burden.sql  housing_units_income.sql  net_plant_balance.sql  operations_emissions_by_fuel.sql  operations_emissions_by_tech.sql  revenue_by_tech.sql  state_policies.sql  state_targets.sql  utility_information.sql  utility_information_2023.sql  utility_state_map.sql  utility_state_map_2023.sql
manifests/: .sops.yaml  README.md  cronwf.yaml  imagestream.yaml  ksops.yaml  kustomization.yaml  postsync-wf.yaml  wftmpl.yaml
notebooks/: ITR-data-production.ipynb  OECM-2023-ingest.ipynb  OECM-benchmark-ingest.ipynb  TPI-benchmark-ingest.ipynb  benchmark_EI_OECM_PC.json  benchmark_EI_OECM_S3.json  benchmark_OECM_PC.xlsx  benchmark_OECM_S3.xlsx  benchmark_production_OECM.json  common_units.py  osc-ingest-rmi_utility_transition_hub.ipynb  rmi-20211120-output.xlsx  test_happy.ipynb
references/: RMI Utility Transition Hub Data Dictionary.xlsx
src/data/: make_dataset.py
test/: test_trivial.py
